<resources>
    <string name="app_name">pizza-shift-2024</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Pizza">Пицца</string>
    <string name="error">Что-то пошло не так, попробуйте позже</string>
    <string name="reset">Попробовать еще раз...</string>
    <string name="loading">Загрузка...</string>

    <string name="small">Маленькая</string>
    <string name="medium">Средняя</string>
    <string name="big">Большая</string>
    <string name="thin">Тонкое тесто</string>
    <string name="thick">Толстое тесто</string>

    <string name="calories">ккал</string>
    <string name="protein">белки</string>
    <string name="totalFat">жиры</string>
    <string name="carbohydrates">углеводы</string>

    <string name="add">Добавки:</string>
    <string name="price">Итоговая цена:</string>

    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="cost">Цена</string>
</resources>