<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/baseline_back_50"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyleTitle"
                android:text="@string/Pizza"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/name"
            android:text="Название"
            style="@style/textStyleTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:text="Описание"
            style="@style/textStyleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="20dp"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:text="@string/small"
                android:gravity="center"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_selector"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:text="@string/medium"
                android:gravity="center"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_selector"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:text="@string/big"
                android:gravity="center"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_selector"
                android:layout_weight="1"/>

        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:text="@string/thin"
                android:gravity="center"
                android:layout_gravity="fill"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_selector"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="12sp"
                android:text="@string/thick"
                android:gravity="center"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_selector"
                android:layout_weight="1"/>

        </RadioGroup>



    </LinearLayout>

</FrameLayout>